external-crates/move/crates/move-compiler/tests/move_2024/typing/syntax_methods_args_invalid.exp
error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:7:41
   │
 7 │     public fun lookup_t<T>(s: &S<T>, i: u64): &u64 { abort 0 }
   │                                         ^^^ This index function expects type 'u64'
   ·
11 │     public fun lookup_mut<T>(s: &mut S<T>, i: T): &mut u64 { abort 0 }
   │                                               - This mutable index function expects type 'T'
   │
   = Index operations must agree on all types but the subject type and return type

error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:20:16
   │
20 │     public fun lookup_t<T,U,V>(s: &S<T>, i: U, j: V): &u64 { abort 0 }
   │                ^^^^^^^^ This index function expects 3 type arguments
   ·
24 │     public fun lookup_mut<Q,R>(s: &mut S<Q>, i: R, j: R): &mut u64 { abort 0 }
   │                ---------- This mutable index function expects 2 type arguments
   │
   = Index operations on the same type must take the name number of type arguments

error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:34:41
   │
34 │     public fun lookup_t<T>(s: &S<T>, i: u64, j: T): &T { abort 0 }
   │                                         ^^^ This index function expects type 'u64'
   ·
38 │     public fun lookup_mut<T>(s: &mut S<T>, i: u32, j: T): &mut T { abort 0 }
   │                                               --- This mutable index function expects type 'u32'
   │
   = Index operations must agree on all types but the subject type and return type

error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:48:16
   │
48 │     public fun lookup_t<T,Q>(s: &S<T>, i: u64, j: Q): &T { abort 0 }
   │                ^^^^^^^^ This index function expects 2 type arguments
   ·
52 │     public fun lookup_mut<T>(s: &mut S<T>, i: u64, j: T): &mut T { abort 0 }
   │                ---------- This mutable index function expects 1 type arguments
   │
   = Index operations on the same type must take the name number of type arguments

error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:62:43
   │
62 │     public fun lookup_t<T,Q>(s: &S<T>, i: u64, j: Q): &T { abort 0 }
   │                                           ^^^ This index function expects type 'u64'
   ·
66 │     public fun lookup_mut<T,Q>(s: &mut S<T>, i: u32, j: T): &mut T { abort 0 }
   │                                                 --- This mutable index function expects type 'u32'
   │
   = Index operations must agree on all types but the subject type and return type

error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:62:51
   │
62 │     public fun lookup_t<T,Q>(s: &S<T>, i: u64, j: Q): &T { abort 0 }
   │                                                   ^ This index function expects type 'Q'
   ·
66 │     public fun lookup_mut<T,Q>(s: &mut S<T>, i: u32, j: T): &mut T { abort 0 }
   │                                                         - This mutable index function expects type 'T'
   │
   = Index operations must agree on all types but the subject type and return type

error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:76:43
   │
76 │     public fun lookup_t<T,R>(s: &S<T>, i: R, j: T): &T { abort 0 }
   │                                           ^ This index function expects type 'R'
   ·
80 │     public fun lookup_mut<T,R>(s: &mut S<T>, i: T, j: T): &mut T { abort 0 }
   │                                                 - This mutable index function expects type 'T'
   │
   = Index operations must agree on all types but the subject type and return type

error[E04033]: syntax method return types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:90:41
   │
90 │     public fun lookup_t<T>(s: &S<T>, i: u64): &T {
   │                                         ^^^ This index function expects type 'u64'
   ·
95 │     public fun lookup_mut<T>(s: &mut S<T>, i: u32): &mut T {
   │                                               --- This mutable index function expects type 'u32'
   │
   = Index operations must agree on all types but the subject type and return type

